@@ -1,0 +1,6 @@
+#!/bin/sh
+
+chmod a-x debian/*.desktop
+
+echo "Remove executable bit from desktop files."
+echo "Fixed-Lintian-Tags: executable-desktop-file"
